update, uz sa niekam dostavame :D

--- a/chramst2.ipynb
+++ b/chramst2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "5dface22",
    "metadata": {},
    "outputs": [
@@ -14,43 +14,47 @@
       "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
       "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
       "Cerveny: 4. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
-      "Modry zahral kartu 5\n",
-      "karty zahrane za kolo: [(5, 'Modry')]\n",
-      "Karty v odhadzovanom balicku pre Modry: [5]\n",
-      "Modry: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
+      "Modry zahral kartu 1\n",
+      "karty zahrane za kolo: [(1, 'Modry')]\n",
+      "Karty v odhadzovanom balicku pre Modry: [1]\n",
+      "Modry: 1. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
       "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
       "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
       "Cerveny: 4. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
-      "Zlty zahral kartu 5\n",
-      "karty zahrane za kolo: [(5, 'Modry'), (5, 'Zlty')]\n",
-      "Karty v odhadzovanom balicku pre Zlty: [5]\n",
-      "Modry: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
-      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
+      "Zlty zahral kartu 1\n",
+      "karty zahrane za kolo: [(1, 'Modry'), (1, 'Zlty')]\n",
+      "Karty v odhadzovanom balicku pre Zlty: [1]\n",
+      "Modry: 1. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
       "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
       "Cerveny: 4. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
-      "Zeleny zahral kartu 5\n",
-      "karty zahrane za kolo: [(5, 'Modry'), (5, 'Zlty'), (5, 'Zeleny')]\n",
-      "Karty v odhadzovanom balicku pre Zeleny: [5]\n",
-      "Modry: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
-      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
-      "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
+      "Zeleny zahral kartu 1\n",
+      "karty zahrane za kolo: [(1, 'Modry'), (1, 'Zlty'), (1, 'Zeleny')]\n",
+      "Karty v odhadzovanom balicku pre Zeleny: [1]\n",
+      "Modry: 1. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
       "Cerveny: 4. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
       "Cerveny zahral kartu 5\n",
-      "karty zahrane za kolo: [(5, 'Modry'), (5, 'Zlty'), (5, 'Zeleny'), (5, 'Cerveny')]\n",
+      "karty zahrane za kolo: [(1, 'Modry'), (1, 'Zlty'), (1, 'Zeleny'), (5, 'Cerveny')]\n",
       "Karty v odhadzovanom balicku pre Cerveny: [5]\n",
-      "Modry: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
-      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
-      "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
+      "Modry: 1. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
       "Cerveny: 4. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
       "\n",
       "=== VYHODNOTENIE KOLA ===\n",
-      "Neduplikátne karty: []\n",
-      "Duplikátne čísla sú: {5}\n",
-      "Karty s duplikátnymi číslami: [(5, 'Modry'), (5, 'Zlty'), (5, 'Zeleny'), (5, 'Cerveny')]\n",
-      "1. miesto: Modry zahral kartu 5\n",
-      "1. miesto: Zlty zahral kartu 5\n",
-      "1. miesto: Zeleny zahral kartu 5\n",
-      "1. miesto: Cerveny zahral kartu 5\n"
+      "Neduplikátne karty: [(5, 'Cerveny')]\n",
+      "Duplikátne čísla sú: {1}\n",
+      "Karty s duplikátnymi číslami: [(1, 'Modry'), (1, 'Zlty'), (1, 'Zeleny')]\n",
+      "1. miesto: Cerveny zahral kartu 5\n",
+      "2. miesto: Modry zahral kartu 1\n",
+      "3. miesto: Zlty zahral kartu 1\n",
+      "4. miesto: Zeleny zahral kartu 1\n",
+      "Modry: 2. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zlty: 3. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zeleny: 4. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Cerveny: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n"
      ]
     }
    ],
@@ -143,31 +147,37 @@
     "        for item in zoradene_karty:\n",
     "            karta = item[0]\n",
     "            meno_hraca = item[1]\n",
-    "            print(f\"{poradie}. miesto: {meno_hraca} zahral kartu {karta}\")\n",
-    "            self.hraci[meno_hraca][\"poradie\"] = poradie\n",
+    "            print(f\"{poradie}. miesto: {meno_hraca} zahral kartu {karta}\")               \n",
+    "            self.hraci[meno_hraca][\"poradie\"] = poradie         \n",
     "            poradie += 1\n",
+    "            \n",
+    "            \n",
     "            \n",
     "            \n",
     "    #aby som mohla najskor priradit poradie duplikatom, tak musim dat pozor na ich povodne poradie\n",
     "    #vysortovat od mensieho po vacsie cislo podla poradia\n",
     "    #priradit za poradie neduplikatov\n",
-    "        poradie_duplikatov = poradie + 1\n",
+    "        poradie_duplikatov = poradie\n",
     "        for item in zoradene_duplikatne_karty:\n",
     "            karta = item[0]\n",
     "            meno_hraca = item[1]\n",
-    "            print(f\"{poradie}. miesto: {meno_hraca} zahral kartu {karta}\")\n",
-    "            poradie_duplikatov += poradie + 1  \n",
+    "            print(f\"{poradie_duplikatov}. miesto: {meno_hraca} zahral kartu {karta}\")\n",
+    "            self.hraci[meno_hraca][\"poradie\"] = poradie_duplikatov #musi tu byt takto, aby potom priradilo aj poradia do self.hraci\n",
+    "            poradie_duplikatov += 1 \n",
+    "            \n",
     "                 \n",
     "                \n",
-    "                \n",
+    "            \n",
     "                \n",
     "            \n",
     "        \n",
     "        #\n",
     "        \n",
-    "        #zober zivot poslednemu\n",
-    "        \n",
-    "        # zmen poradia hracov, posledny ide na prve miesto ostatni za nim idu o minus jedna\n",
+    "    #zober zivot poslednemu\n",
+    "   \n",
+    "             \n",
+    "          \n",
+    "    # zmen poradia hracov, posledny ide na prve miesto ostatni za nim idu o minus jedna\n",
     "            \n",
     "       \n",
     "        \n",
@@ -190,6 +200,8 @@
     "hra.zahraj_kartu(\"Cerveny\")\n",
     "hra.zobraz_hracov()\n",
     "hra.vyhodnot_kolo()\n",
+    "hra.zobraz_hracov()\n",
+    "\n",
     "\n",
     "\n",
     "\n",
