--- a/chramst.ipynb
+++ b/chramst.ipynb
@@ -402,6 +402,214 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "278cb8d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "281d2e29",
+   "metadata": {},
+   "source": [
+    "23.11. trosku sme to upravili, uz to funguje ako ma. snad :D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfc9551f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "class Chramst:\n",
+    "    def __init__(self):\n",
+    "        \n",
+    "        self.hraci = {\n",
+    "            \"Modry\": {\"poradie\": 1, \"zivoty\": 4, \"karty na ruke\": [1, 2, 3, 4, 5, 6], \"odhadzovaci balicek\": []},\n",
+    "            \"Zlty\": {\"poradie\": 2, \"zivoty\": 4, \"karty na ruke\": [1, 2, 3, 4, 5, 6], \"odhadzovaci balicek\": []},\n",
+    "            \"Zeleny\": {\"poradie\": 3, \"zivoty\": 4, \"karty na ruke\": [1, 2, 3, 4, 5, 6], \"odhadzovaci balicek\": []},\n",
+    "            \"Cerveny\": {\"poradie\": 4, \"zivoty\": 4, \"karty na ruke\": [1, 2, 3, 4, 5, 6], \"odhadzovaci balicek\": []}\n",
+    "        }\n",
+    "        \n",
+    "        self.karty_zahrane_v_kole = []\n",
+    "        \n",
+    "    def zobraz_hracov(self):\n",
+    "        for meno, info in self.hraci.items():\n",
+    "            print(f\"{meno}: {info['poradie']}. miesto, Zivoty: {info['zivoty']}. karty na ruke: {info['karty na ruke']}. karty v odhadzovacom balicku: {info['odhadzovaci balicek']} \")\n",
+    "         \n",
+    "     \n",
+    "        \n",
+    "    def zahraj_kartu(self, meno_hraca):\n",
+    "        # Zisti karty tohto hraca\n",
+    "        karty_hraca = self.hraci[meno_hraca][\"karty na ruke\"]\n",
+    "        vyber_kartu = int(input(f\"{meno_hraca}, vyber si kartu co chces zahrat {karty_hraca}: \"))\n",
+    "       \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        if vyber_kartu not in karty_hraca:\n",
+    "            print(f\"Cislo {vyber_kartu} nie je spravne. Vyber si jednu z kariet co mas na ruke\")\n",
+    "        else:\n",
+    "            print(f\"{meno_hraca} zahral kartu {vyber_kartu}\")\n",
+    "            # Odstráň kartu konkrétnemu hráčovi\n",
+    "            self.hraci[meno_hraca][\"karty na ruke\"].remove(vyber_kartu)\n",
+    "            self.hraci[meno_hraca][\"odhadzovaci balicek\"].append(vyber_kartu)\n",
+    "            self.karty_zahrane_v_kole.append((vyber_kartu, meno_hraca)) # potrebne na vyhodnocovanie neskor,a tak aby vedel python precitat ci nebola jedna karta zahrana viac krat a ktorymi hracmi\n",
+    "            print(f\"karty zahrane za kolo: {self.karty_zahrane_v_kole}\")\n",
+    "            #print(f\"Karty v odhadzovanom balicku pre {meno}: {info['odhadzovaci balicek']}: {self.odhadzovaci_balicek}\")\n",
+    "            print(f\"Karty v odhadzovanom balicku pre {meno_hraca}: {self.hraci[meno_hraca]['odhadzovaci balicek']}\")\n",
+    "            \n",
+    "    \n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "            \n",
+    "    def vyhodnot_kolo(self):\n",
+    "        print(\"\\n=== VYHODNOTENIE KOLA ===\")\n",
+    "        \n",
+    "        # ak si hraci vybrali rovnake karty, vyblokovali a,  tak neziskavaju ziaden bod, poradie sa nemeni\n",
+    "        # potom sa vyhodnotia ostatni hraci, zacne sa s tym, ktory dal kartu s najnizsim cislom, jeho poradie sa posuva pred tych, co sa vyblokovali\n",
+    "        # cize hrac s najvysskou nevyblokovanou kartou by mal byt na prvom mieste\n",
+    "        # hrac co skoncil posledny prichadza o jeden zivot\n",
+    "        # nasledne tento posledny hrac ide na prve miesto, a posuva ostatnych o priecku nizssie   \n",
+    "             \n",
+    "        #najdi vyblokovane karty, najdem si co sa mi opakovalo . tym co sa opakovali sa nateraz nebude menit poradie\n",
+    "                # 1.Vytvoríme zoznam všetkých druhých hodnôt (index 0 v každej n-tici)\n",
+    "        cisla = [karta[0] for karta in self.karty_zahrane_v_kole]\n",
+    "                # 2. Použite Counter na zistenie frekvencie čísel\n",
+    "        pocet_cisel = Counter(cisla)\n",
+    "                # 3. Identifikujte tie čísla, ktoré sa duplikujú (majú počet > 1)\n",
+    "        duplikatne_cisla = {cisla for cisla, pocet in pocet_cisel.items() if pocet > 1}\n",
+    "                # 4. Iterujte cez pôvodný zoznam a vyberte karty, ktoré majú duplicitné číslo\n",
+    "        karty_s_duplikatnym_cislom = [karta for karta in self.karty_zahrane_v_kole if karta[0] in duplikatne_cisla]\n",
+    "        zoradene_duplikatne_karty = sorted(karty_s_duplikatnym_cislom, key=lambda x: x[0], reverse = False)\n",
+    "        \n",
+    "        neduplikatne_karty = [karta for karta in self.karty_zahrane_v_kole if karta[0] not in duplikatne_cisla]\n",
+    "        print(f\"Neduplikátne karty: {neduplikatne_karty}\")\n",
+    "        \n",
+    "        print(f\"Duplikátne čísla sú: {duplikatne_cisla}\")\n",
+    "        print(f\"Karty s duplikátnymi číslami: {karty_s_duplikatnym_cislom}\")\n",
+    "        \n",
+    "         # KROK 3: Zoraď neduplikátne karty od najvyššej po najnižšiu\n",
+    "        zoradene_karty = sorted(neduplikatne_karty, key=lambda x: x[0], reverse=True)\n",
+    "        \n",
+    "       \n",
+    "        \n",
+    "        #prejdi zoradene karty, pre poradie, zaciname od 1.. zoberie si kartu s najvyssim poctom  bodov\n",
+    "        # cize na indexe nula budeme mat prve miesto. aby sme ale realne printili od jednotky a nie nuly\n",
+    "        # vytvorime poradie s hodnotou jedna, spravime for loop\n",
+    "        #pre kazdu srandu zo zoradenych kariet, (karta, meno hraca) , vyprinti info vetu ako sme natom\n",
+    "        # a nezabudni priradit tymto hracom nove poradie \n",
+    "        \n",
+    "        poradie = 1\n",
+    "        for item in zoradene_karty:\n",
+    "            karta = item[0]\n",
+    "            meno_hraca = item[1]\n",
+    "            print(f\"{poradie}. miesto: {meno_hraca} zahral kartu {karta}\")               \n",
+    "            self.hraci[meno_hraca][\"poradie\"] = poradie         \n",
+    "            poradie += 1\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "    #aby som mohla najskor priradit poradie duplikatom, tak musim dat pozor na ich povodne poradie\n",
+    "    #vysortovat od mensieho po vacsie cislo podla poradia\n",
+    "    #priradit za poradie neduplikatov\n",
+    "        poradie_duplikatov = poradie\n",
+    "        for item in zoradene_duplikatne_karty:\n",
+    "            karta = item[0]\n",
+    "            meno_hraca = item[1]\n",
+    "            print(f\"{poradie_duplikatov}. miesto: {meno_hraca} zahral kartu {karta}\")\n",
+    "            self.hraci[meno_hraca][\"poradie\"] = poradie_duplikatov #musi tu byt takto, aby potom priradilo aj poradia do self.hraci\n",
+    "            poradie_duplikatov += 1 \n",
+    "            \n",
+    "                 \n",
+    "                \n",
+    "    \n",
+    "            \n",
+    "    def uber_zivot(self):\n",
+    "    # zorad hracov podla poradia, od najlepsieho po najhorsieho, x[1] je indexovanie/hodnota kluca -poradie z dictionary\n",
+    "    #meno hraca je nula, poradie 1, musime zoradit podla poradia cize preto x[1]\n",
+    "    #metoda items(), berie dvojice z dictionary\n",
+    "        zoradeni_hraci = sorted(self.hraci.items(), key=lambda x: x[1][\"poradie\"])\n",
+    "        print(f\" zoradeni hraci: {zoradeni_hraci}\")\n",
+    "    \n",
+    "    # Posledny hrac (index -1) straca zivot. Treba indexovat kedze neskor pocas hry hracov bude ubudat\n",
+    "    #-1 = posledny prvok v zozname\n",
+    "    #[0] = prvý prvok z dvojice (meno hraca) / zaujima ma ktory HRAC straca zivot\n",
+    "        meno_posledneho = zoradeni_hraci[-1][0]\n",
+    "        self.hraci[meno_posledneho][\"zivoty\"] -= 1\n",
+    "        print(f\"{meno_posledneho} prisiel o zivot! zostava {self.hraci[meno_posledneho]['zivoty']} zivoty/zivot.\")\n",
+    "    \n",
+    "    #po odratani zivota ide posledny hrac na prve miesto a posuva ostatnych hracov na              \n",
+    "    def posledny_na_prve(self): \n",
+    "        # Zorad hracov podla aktualneho poradia       \n",
+    "        zoradeni_hraci2 = sorted(self.hraci.items(), key=lambda x: x[1][\"poradie\"])\n",
+    "        \n",
+    "        # Posledny hrac (ten s najhorsim poradim)\n",
+    "        meno_posledneho2 = zoradeni_hraci2[-1][0]\n",
+    "        # Posledny ide na prve miesto (poradie = 1), na tvrdo zadefinovane\n",
+    "        self.hraci[meno_posledneho2][\"poradie\"] = 1\n",
+    "        \n",
+    "        for item in range(len(zoradeni_hraci2) - 1): #posledneho mame uz supnuteho na prve miesto, cize nam zostava zvysok hracov minus jeden\n",
+    "            meno_hraca = zoradeni_hraci2[item][0]\n",
+    "            self.hraci[meno_hraca][\"poradie\"] += 1\n",
+    "    \n",
+    "            \n",
+    "        print(f\"{meno_posledneho2} ide na prve miesto, ostatni sa posuvaju.\")\n",
+    "               \n",
+    "        \n",
+    "        \n",
+    "   \n",
+    "#hru zacat while loop??\n",
+    "# zadefinovat kedy konci hra: ak zostanu posledni dvaja hraci, ten co ma poradie 1 je vitaz\n",
+    "# ak ma hrac nula zivotov vypadava z hry\n",
+    "# ak ma na ruke iba jednu kartu, doberie si do ruky vsetky karty z odhadzovacieho balika\n",
+    "\n",
+    "            \n",
+    "       \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n",
+    "# Vytvorenie instance hry a zahranie karty\n",
+    "hra = Chramst()\n",
+    "hra.zobraz_hracov()\n",
+    "hra.zahraj_kartu(\"Modry\")\n",
+    "hra.zobraz_hracov()\n",
+    "hra.zahraj_kartu(\"Zlty\")\n",
+    "hra.zobraz_hracov()\n",
+    "hra.zahraj_kartu(\"Zeleny\")\n",
+    "hra.zobraz_hracov()\n",
+    "hra.zahraj_kartu(\"Cerveny\")\n",
+    "hra.zobraz_hracov()\n",
+    "hra.vyhodnot_kolo()\n",
+    "hra.zobraz_hracov()\n",
+    "hra.uber_zivot()\n",
+    "hra.zobraz_hracov()\n",
+    "hra.posledny_na_prve()\n",
+    "hra.zobraz_hracov()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
