--- a/chramst2.ipynb
+++ b/chramst2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "5dface22",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,17 @@
       "Modry: 2. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
       "Zlty: 3. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
       "Zeleny: 4. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Cerveny: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n"
+      "Cerveny: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
+      " zoradeni hraci: [('Cerveny', {'poradie': 1, 'zivoty': 4, 'karty na ruke': [1, 2, 3, 4, 6], 'odhadzovaci balicek': [5]}), ('Modry', {'poradie': 2, 'zivoty': 4, 'karty na ruke': [2, 3, 4, 5, 6], 'odhadzovaci balicek': [1]}), ('Zlty', {'poradie': 3, 'zivoty': 4, 'karty na ruke': [2, 3, 4, 5, 6], 'odhadzovaci balicek': [1]}), ('Zeleny', {'poradie': 4, 'zivoty': 4, 'karty na ruke': [2, 3, 4, 5, 6], 'odhadzovaci balicek': [1]})]\n",
+      "Zeleny prisiel o zivot! zostava 3 zivoty/zivot.\n",
+      "Modry: 2. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zlty: 3. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zeleny: 4. miesto, Zivoty: 3. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Cerveny: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
+      "Modry: 3. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zlty: 4. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zeleny: 1. miesto, Zivoty: 3. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Cerveny: 2. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n"
      ]
     }
    ],
@@ -167,17 +177,47 @@
     "            \n",
     "                 \n",
     "                \n",
+    "    \n",
     "            \n",
-    "                \n",
+    "    def uber_zivot(self):\n",
+    "    # zorad hracov podla poradia, od najlepsieho po najhorsieho, x[1] je indexovanie/hodnota kluca -poradie z dictionary\n",
+    "    #meno hraca je nula, poradie 1, musime zoradit podla poradia cize preto x[1]\n",
+    "    #metoda items(), berie dvojice z dictionary\n",
+    "        zoradeni_hraci = sorted(self.hraci.items(), key=lambda x: x[1][\"poradie\"])\n",
+    "        print(f\" zoradeni hraci: {zoradeni_hraci}\")\n",
+    "    \n",
+    "    # Posledny hrac (index -1) straca zivot. Treba indexovat kedze neskor pocas hry hracov bude ubudat\n",
+    "    #-1 = posledny prvok v zozname\n",
+    "    #[0] = prvý prvok z dvojice (meno hraca) / zaujima ma ktory HRAC straca zivot\n",
+    "        meno_posledneho = zoradeni_hraci[-1][0]\n",
+    "        self.hraci[meno_posledneho][\"zivoty\"] -= 1\n",
+    "        print(f\"{meno_posledneho} prisiel o zivot! zostava {self.hraci[meno_posledneho]['zivoty']} zivoty/zivot.\")\n",
+    "    \n",
+    "    #po odratani zivota ide posledny hrac na prve miesto a posuva ostatnych hracov na              \n",
+    "    def posledny_na_prve(self): \n",
+    "        # Zorad hracov podla aktualneho poradia       \n",
+    "        zoradeni_hraci2 = sorted(self.hraci.items(), key=lambda x: x[1][\"poradie\"])\n",
+    "        \n",
+    "        # Posledny hrac (ten s najhorsim poradim)\n",
+    "        meno_posledneho2 = zoradeni_hraci2[-1][0]\n",
+    "        # Posledny ide na prve miesto (poradie = 1), na tvrdo zadefinovane\n",
+    "        self.hraci[meno_posledneho2][\"poradie\"] = 1\n",
+    "        \n",
+    "        for item in range(len(zoradeni_hraci2) - 1): #posledneho mame uz supnuteho na prve miesto, cize nam zostava zvysok hracov minus jeden\n",
+    "            meno_hraca = zoradeni_hraci2[item][0]\n",
+    "            self.hraci[meno_hraca][\"poradie\"] += 1\n",
+    "    \n",
     "            \n",
+    "        print(f\"{meno_posledneho2} ide na prve miesto, ostatni sa posuvaju.\")\n",
+    "               \n",
     "        \n",
-    "        #\n",
     "        \n",
-    "    #zober zivot poslednemu\n",
     "   \n",
-    "             \n",
-    "          \n",
-    "    # zmen poradia hracov, posledny ide na prve miesto ostatni za nim idu o minus jedna\n",
+    "#hru zacat while loop??\n",
+    "# zadefinovat kedy konci hra: ak zostanu posledni dvaja hraci, ten co ma poradie 1 je vitaz\n",
+    "# ak ma hrac nula zivotov vypadava z hry\n",
+    "# ak ma na ruke iba jednu kartu, doberie si do ruky vsetky karty z odhadzovacieho balika\n",
+    "\n",
     "            \n",
     "       \n",
     "        \n",
@@ -201,6 +241,12 @@
     "hra.zobraz_hracov()\n",
     "hra.vyhodnot_kolo()\n",
     "hra.zobraz_hracov()\n",
+    "hra.uber_zivot()\n",
+    "hra.zobraz_hracov()\n",
+    "hra.posledny_na_prve()\n",
+    "hra.zobraz_hracov()\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
