--- a/chramst2.ipynb
+++ b/chramst2.ipynb
@@ -21,50 +21,57 @@
       "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
       "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
       "Cerveny: 4. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
-      "Zlty zahral kartu 1\n",
-      "karty zahrane za kolo: [(1, 'Modry'), (1, 'Zlty')]\n",
-      "Karty v odhadzovanom balicku pre Zlty: [1]\n",
+      "Zlty zahral kartu 2\n",
+      "karty zahrane za kolo: [(1, 'Modry'), (2, 'Zlty')]\n",
+      "Karty v odhadzovanom balicku pre Zlty: [2]\n",
       "Modry: 1. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [1, 3, 4, 5, 6]. karty v odhadzovacom balicku: [2] \n",
       "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
       "Cerveny: 4. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
-      "Zeleny zahral kartu 1\n",
-      "karty zahrane za kolo: [(1, 'Modry'), (1, 'Zlty'), (1, 'Zeleny')]\n",
-      "Karty v odhadzovanom balicku pre Zeleny: [1]\n",
+      "Zeleny zahral kartu 3\n",
+      "karty zahrane za kolo: [(1, 'Modry'), (2, 'Zlty'), (3, 'Zeleny')]\n",
+      "Karty v odhadzovanom balicku pre Zeleny: [3]\n",
       "Modry: 1. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [1, 3, 4, 5, 6]. karty v odhadzovacom balicku: [2] \n",
+      "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [1, 2, 4, 5, 6]. karty v odhadzovacom balicku: [3] \n",
       "Cerveny: 4. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [] \n",
-      "Cerveny zahral kartu 5\n",
-      "karty zahrane za kolo: [(1, 'Modry'), (1, 'Zlty'), (1, 'Zeleny'), (5, 'Cerveny')]\n",
-      "Karty v odhadzovanom balicku pre Cerveny: [5]\n",
+      "Cerveny zahral kartu 4\n",
+      "karty zahrane za kolo: [(1, 'Modry'), (2, 'Zlty'), (3, 'Zeleny'), (4, 'Cerveny')]\n",
+      "Karty v odhadzovanom balicku pre Cerveny: [4]\n",
       "Modry: 1. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Cerveny: 4. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
+      "Zlty: 2. miesto, Zivoty: 4. karty na ruke: [1, 3, 4, 5, 6]. karty v odhadzovacom balicku: [2] \n",
+      "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [1, 2, 4, 5, 6]. karty v odhadzovacom balicku: [3] \n",
+      "Cerveny: 4. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 5, 6]. karty v odhadzovacom balicku: [4] \n",
       "\n",
       "=== VYHODNOTENIE KOLA ===\n",
-      "Neduplikátne karty: [(5, 'Cerveny')]\n",
-      "Duplikátne čísla sú: {1}\n",
-      "Karty s duplikátnymi číslami: [(1, 'Modry'), (1, 'Zlty'), (1, 'Zeleny')]\n",
-      "1. miesto: Cerveny zahral kartu 5\n",
-      "2. miesto: Modry zahral kartu 1\n",
-      "3. miesto: Zlty zahral kartu 1\n",
-      "4. miesto: Zeleny zahral kartu 1\n",
-      "Modry: 2. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Zlty: 3. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Zeleny: 4. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Cerveny: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
-      " zoradeni hraci: [('Cerveny', {'poradie': 1, 'zivoty': 4, 'karty na ruke': [1, 2, 3, 4, 6], 'odhadzovaci balicek': [5]}), ('Modry', {'poradie': 2, 'zivoty': 4, 'karty na ruke': [2, 3, 4, 5, 6], 'odhadzovaci balicek': [1]}), ('Zlty', {'poradie': 3, 'zivoty': 4, 'karty na ruke': [2, 3, 4, 5, 6], 'odhadzovaci balicek': [1]}), ('Zeleny', {'poradie': 4, 'zivoty': 4, 'karty na ruke': [2, 3, 4, 5, 6], 'odhadzovaci balicek': [1]})]\n",
-      "Zeleny prisiel o zivot! zostava 3 zivoty/zivot.\n",
-      "Modry: 2. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Zlty: 3. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Zeleny: 4. miesto, Zivoty: 3. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Cerveny: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n",
-      "Modry: 3. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Zlty: 4. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Zeleny: 1. miesto, Zivoty: 3. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
-      "Cerveny: 2. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 4, 6]. karty v odhadzovacom balicku: [5] \n"
+      "Neduplikátne karty: [(1, 'Modry'), (2, 'Zlty'), (3, 'Zeleny'), (4, 'Cerveny')]\n",
+      "Duplikátne čísla sú: set()\n",
+      "Karty s duplikátnymi číslami: []\n",
+      "1. miesto: Cerveny zahral kartu 4\n",
+      "2. miesto: Zeleny zahral kartu 3\n",
+      "3. miesto: Zlty zahral kartu 2\n",
+      "4. miesto: Modry zahral kartu 1\n",
+      "Modry: 4. miesto, Zivoty: 4. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zlty: 3. miesto, Zivoty: 4. karty na ruke: [1, 3, 4, 5, 6]. karty v odhadzovacom balicku: [2] \n",
+      "Zeleny: 2. miesto, Zivoty: 4. karty na ruke: [1, 2, 4, 5, 6]. karty v odhadzovacom balicku: [3] \n",
+      "Cerveny: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 5, 6]. karty v odhadzovacom balicku: [4] \n",
+      " zoradeni hraci: [('Cerveny', {'poradie': 1, 'zivoty': 4, 'karty na ruke': [1, 2, 3, 5, 6], 'odhadzovaci balicek': [4]}), ('Zeleny', {'poradie': 2, 'zivoty': 4, 'karty na ruke': [1, 2, 4, 5, 6], 'odhadzovaci balicek': [3]}), ('Zlty', {'poradie': 3, 'zivoty': 4, 'karty na ruke': [1, 3, 4, 5, 6], 'odhadzovaci balicek': [2]}), ('Modry', {'poradie': 4, 'zivoty': 4, 'karty na ruke': [2, 3, 4, 5, 6], 'odhadzovaci balicek': [1]})]\n",
+      "Modry prisiel o zivot! zostava 3 zivoty/zivot.\n",
+      "Modry: 4. miesto, Zivoty: 3. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zlty: 3. miesto, Zivoty: 4. karty na ruke: [1, 3, 4, 5, 6]. karty v odhadzovacom balicku: [2] \n",
+      "Zeleny: 2. miesto, Zivoty: 4. karty na ruke: [1, 2, 4, 5, 6]. karty v odhadzovacom balicku: [3] \n",
+      "Cerveny: 1. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 5, 6]. karty v odhadzovacom balicku: [4] \n",
+      "Modry ide na prve miesto, ostatni sa posuvaju.\n",
+      "Modry: 1. miesto, Zivoty: 3. karty na ruke: [2, 3, 4, 5, 6]. karty v odhadzovacom balicku: [1] \n",
+      "Zlty: 4. miesto, Zivoty: 4. karty na ruke: [1, 3, 4, 5, 6]. karty v odhadzovacom balicku: [2] \n",
+      "Zeleny: 3. miesto, Zivoty: 4. karty na ruke: [1, 2, 4, 5, 6]. karty v odhadzovacom balicku: [3] \n",
+      "Cerveny: 2. miesto, Zivoty: 4. karty na ruke: [1, 2, 3, 5, 6]. karty v odhadzovacom balicku: [4] \n",
+      "Hrajuci hraci: ['Modry', 'Zlty', 'Zeleny', 'Cerveny']\n",
+      "\n",
+      "=== NOVE KOLO ===\n",
+      "Hrajuci hraci: ['Modry', 'Zlty', 'Zeleny', 'Cerveny']\n",
+      "V tomto kole hraju(hraj_kolo): ['Modry', 'Zlty', 'Zeleny', 'Cerveny']\n",
+      "poradie hracov: [('Modry', {'poradie': 1, 'zivoty': 3, 'karty na ruke': [2, 3, 4, 5, 6], 'odhadzovaci balicek': [1]}), ('Cerveny', {'poradie': 2, 'zivoty': 4, 'karty na ruke': [1, 2, 3, 5, 6], 'odhadzovaci balicek': [4]}), ('Zeleny', {'poradie': 3, 'zivoty': 4, 'karty na ruke': [1, 2, 4, 5, 6], 'odhadzovaci balicek': [3]}), ('Zlty', {'poradie': 4, 'zivoty': 4, 'karty na ruke': [1, 3, 4, 5, 6], 'odhadzovaci balicek': [2]})]\n"
      ]
     }
    ],
@@ -192,6 +199,8 @@
     "        meno_posledneho = zoradeni_hraci[-1][0]\n",
     "        self.hraci[meno_posledneho][\"zivoty\"] -= 1\n",
     "        print(f\"{meno_posledneho} prisiel o zivot! zostava {self.hraci[meno_posledneho]['zivoty']} zivoty/zivot.\")\n",
+    "        \n",
+    "        \n",
     "    \n",
     "    #po odratani zivota ide posledny hrac na prve miesto a posuva ostatnych hracov na              \n",
     "    def posledny_na_prve(self): \n",
@@ -209,8 +218,73 @@
     "    \n",
     "            \n",
     "        print(f\"{meno_posledneho2} ide na prve miesto, ostatni sa posuvaju.\")\n",
-    "               \n",
     "        \n",
+    "        \n",
+    "    def aktivni_hraci(self):\n",
+    "    # zoznam mien hracov, co maju aktivne zivoty\n",
+    "        hrajuci_hraci = []  # Zoznam, nie dictionary... mena su dolezite, staci zonam, na tie mena sa potom viazu ostatne vlastnosti\n",
+    "    \n",
+    "        for meno, info in self.hraci.items():  # items() da dvojice, \n",
+    "            pocet_zivotov = info[\"zivoty\"]  # Takto ceknem zivoty\n",
+    "        \n",
+    "            if pocet_zivotov > 0:\n",
+    "                hrajuci_hraci.append(meno)  # Pridaj meno do zoznamu\n",
+    "    \n",
+    "        print(f\"Hrajuci hraci: {hrajuci_hraci}\")\n",
+    "        return hrajuci_hraci  # return mimo for loopu. ak by to bolo v ramci for loopu, nechecklo by to vsetkych hracov, hned by sa to zastavilo\n",
+    "                              # tym ze je tu return, viem dostat tuto premennu aj von z funkcie. ak by nebol return, funkcia skonci a premenna zanikne\n",
+    "    \n",
+    "    def hraj_kolo(self):\n",
+    "        print(\"\\n=== NOVE KOLO ===\")\n",
+    "    ##### PRIEBEH HRY #######\n",
+    "    # 1. zisti ktori hraci su aktivni, zavolaj funkciu ativini_hraci a uloz adta do premennej aktivni\n",
+    "        aktivni = self.aktivni_hraci()\n",
+    "        print(f\"V tomto kole hraju(hraj_kolo): {aktivni}\")\n",
+    "    \n",
+    "    # 2. Zoraď ich podľa poradia (použij sorted)\n",
+    "        hraci_podla_poradia = sorted(self.hraci.items(), key=lambda x: x[1][\"poradie\"])\n",
+    "        print(f\"poradie hracov: {hraci_podla_poradia}\")\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    # 3. kazdy aktivny hrac zahra kartu (for loop + zahraj_kartu)\n",
+    "        for hraci in aktivni:\n",
+    "            self.zahraj_kartu(hraci)\n",
+    "                \n",
+    "    \n",
+    "    # 4. Vyhodnoť kolo\n",
+    "        self.vyhodnot_kolo()\n",
+    "    \n",
+    "    # 5. Uber život\n",
+    "        self.uber_zivot()\n",
+    "    \n",
+    "    # 6. Posledný na prvé\n",
+    "        self.posledny_na_prve()\n",
+    "    \n",
+    "    # 7. Vyčisti karty_zahrane_v_kole = [] (priprav sa na nové kolo)\n",
+    "        \n",
+    "    \n",
+    "    # 1. Zisti ktorí hráči ešte hrajú (zavolaj aktivni_hraci)\n",
+    "    \n",
+    "    # 2. Zoraď ich podľa poradia (použij sorted)\n",
+    "    \n",
+    "    # 3. Každý aktívny hráč zahrá kartu (for loop + zahraj_kartu)\n",
+    "    \n",
+    "    # 4. Vyhodnoť kolo\n",
+    "    \n",
+    "    # 5. Uber život\n",
+    "    \n",
+    "    # 6. Posledný na prvé\n",
+    "    \n",
+    "    # 7. Vyčisti karty_zahrane_v_kole = [] (priprav sa na nové kolo)\n",
+    "    \n",
+    "    \n",
+    "               \n",
+    "\n",
+    "    \n",
+    "    # Kto vyhral? \n",
+    "        \n",
+    "\n",
     "        \n",
     "   \n",
     "#hru zacat while loop??\n",
@@ -245,6 +319,8 @@
     "hra.zobraz_hracov()\n",
     "hra.posledny_na_prve()\n",
     "hra.zobraz_hracov()\n",
+    "hra.aktivni_hraci()\n",
+    "hra.hraj_kolo()\n",
     "\n",
     "\n",
     "\n",
